--- a/app.json
+++ b/app.json
@@ -1,6 +1,8 @@
 {
   "pages":[
-    "pages/index/index"
+    "pages/index/index",
+    "pages/out/out",
+    "pages/outDetail/outDetail"
   ],
   "window":{
     "backgroundTextStyle":"light",
