--- a/app.json
+++ b/app.json
@@ -1,15 +1,22 @@
 {
-  "pages":[
+  "pages": [
     "pages/index/index",
     "pages/out/out",
-    "pages/outDetail/outDetail"
+    "pages/outDetail/outDetail",
+    "pages/planRouter/planRouter"
+    
   ],
-  "window":{
-    "backgroundTextStyle":"light",
+  "window": {
+    "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "Weixin",
-    "navigationBarTextStyle":"black"
+    "navigationBarTextStyle": "black"
   },
   "style": "v2",
-  "sitemapLocation": "sitemap.json"
+  "sitemapLocation": "sitemap.json",
+  "permission": {
+    "scope.userLocation": {
+      "desc": "你的位置信息将用于小程序位置接口的效果展示"
+    }
+  }
 }
